# tdc-assistant-gui-controlle-v2

./: .gitignore  README.md  setup.cfg
src/tdc_assistant_gui_controller_v2/: controller.py
src/tdc_assistant_gui_controller_v2/code_editor/: __init__.py  scrape_code_editor_content.py
src/tdc_assistant_gui_controller_v2/code_editor/types/: __init__.py  code_editor.py
src/tdc_assistant_gui_controller_v2/constants/: __init__.py  coordinates.py  delays.py
src/tdc_assistant_gui_controller_v2/controls/: __init__.py  find_control.py
src/tdc_assistant_gui_controller_v2/controls/enums/: __init__.py  control_property_key.py  control_property_value.py
src/tdc_assistant_gui_controller_v2/insert_code_editor/: __init__.py  insert_code_editor.py
src/tdc_assistant_gui_controller_v2/logger/: logger.py
src/tdc_assistant_gui_controller_v2/public_chat/: __init__.py  parse_public_chat.py  scrape_public_chat.py
src/tdc_assistant_gui_controller_v2/public_chat/types/: __init__.py  participant.py  participant_type.py  public_chat.py  public_chat_message.py
src/tdc_assistant_gui_controller_v2/scrape_editors/: __init__.py  scrape_editors.py
src/tdc_assistant_gui_controller_v2/scripts/: constants.py  parse_raw_text_from_public_chat_log.py  scrape_public_chat.py  send_message.py  utils.py
src/tdc_assistant_gui_controller_v2/send_message/: __init__.py  send_message.py
src/tdc_assistant_gui_controller_v2/types/: __init__.py  aws_credentials.py  screenshare.py  window_title.py
src/tdc_assistant_gui_controller_v2/utils/: __init__.py  transform_text.py
src/tdc_assistant_gui_controller_v2/windows/: __init__.py  code_editor_window_controller.py  get_all_windows.py  get_first_window.py  get_window_by_title.py  open_all_windows.py  open_window.py  public_chat_window_controller.py  screenshare_window_controller.py  win32_window_manager.py  window_exception.py  window_manager.py  window_wrapper.py  word_processor_window_controller.py
src/tdc_assistant_gui_controller_v2/word_processor/: __init__.py  word_processor.py
test/: test_parse_public_chat.py
(+3 files in other folders)
