[metadata]
name = tdc-assistant-gui-controller-v2
version = 0.0.1
url = https://github.com/c-c-ca/tdc-assistant-gui-controller-v2
author = Adam Carter
author_email = adm.carter@gmail.com
description = Automation tool for TDC Classroom App v2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9

[options.packages.find]
where = src
exclude =
    test*