[metadata]
name = tdc-assistant-gui-controller-v2
version = 0.0.1
url = https://github.com/c-c-ca/tdc-assistant-gui-controller-v2
author = Adam Carter
author_email = adm.carter@gmail.com
description = Automation tool for TDC Classroom App v2
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >= 3.9
install_requires =
    pywinauto==0.6.8

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    scrape_public_chat = tdc_assistant_gui_controller_v2.scripts.scrape_public_chat:main
    parse_raw_text_from_public_chat_log = tdc_assistant_gui_controller_v2.scripts.parse_raw_text_from_public_chat_log:main
    send_message = tdc_assistant_gui_controller_v2.scripts.send_message:main

[tool:pytest]
testpaths = test
addopts =  --cov --strict-markers
xfail_strict = True

[testenv]
commands =
    pytest {posargs}
deps =
    pytest
    pytest-cov
    pytest-randomly

[coverage:run]
branch = True
source = tdc_assistant_gui_controller_v2

[coverage:report]
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/tdc_assistant_gui_controller_v2/
    */site-packages/tdc_assistant_gui_controller_v2